# subexpressions-plugin

./: .gitignore  LICENSE  subexpressions-plugin.cabal
src/: SubexpressionsPlugin.hs
