name:                subexpressions-plugin
version:             0.0.0
synopsis:            Subexpressions
license:             BSD3
license-file:        LICENSE
author:              Simon Jakobi <simon.jakobi@gmail.com>
maintainer:          Simon Jakobi <simon.jakobi@gmail.com>
copyright:           2019 Simon Jakobi
category:            System
build-type:          Simple
cabal-version:       >=1.18
-- extra-source-files:

library
  hs-source-dirs:    src
  ghc-options:       -Wall -O2
  exposed-modules:   SubexpressionsPlugin
  build-depends:     base       >= 4.12    && < 5
                   , ghc
  default-language:  Haskell2010

source-repository head
  type:              git
  location:          https://github.com/sjakobi/subexpressions-plugin.git
